@@ -12,40 +12,73 @@
 		<module>com.dubture.twig.ui</module>
 		<module>com.dubture.twig.test</module>
 		<module>com.dubture.twig.feature</module>
+		<module>repository</module>
 	</modules>
 
 	<properties>
 		<tycho-version>0.22.0</tycho-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<eclipse.name>luna</eclipse.name>
+		<release>false</release>
+		<bintray.user></bintray.user>
+		<bintray.apikey></bintray.apikey>
+		<bintray.owner></bintray.owner>
+		<bintray.repo>twig-plugin</bintray.repo>
+		<bintray.version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</bintray.version>
+		<pdt.version>latest-nightly</pdt.version>
+		<dltk.version>latest-nightly</dltk.version>
+		<core-plugin.url>http://pdt-eg.github.io/Core-Plugin/nightly</core-plugin.url>
+		<external-mirror.url>http://pdt-eg.github.io/external-mirror/nightly</external-mirror.url>
+		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
 	</properties>
 
 	<repositories>
 		<repository>
-			<id>pex</id>
+			<id>eclipse</id>
 			<layout>p2</layout>
-			<url>http://p2-dev.pdt-extensions.org/</url>
+			<url>http://download.eclipse.org/releases/${eclipse.name}</url>
 		</repository>
 		<repository>
 			<id>dltk</id>
 			<layout>p2</layout>
-			<url>https://hudson.eclipse.org/dltk/job/dltk-nightly/lastSuccessfulBuild/artifact/org.eclipse.dltk.releng/build/update.site/target/repository</url>
+			<url>http://download.eclipse.org/technology/dltk/updates-dev/${dltk.version}/</url>
 		</repository>
 		<repository>
-			<id>luna</id>
+			<id>pdt</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/luna</url>
+			<url>http://download.eclipse.org/tools/pdt/updates/${pdt.version}/</url>
 		</repository>
 		<repository>
-			<id>pdt-nightly</id>
+			<id>core-plugin</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/tools/pdt/updates/latest-nightly/</url>
+			<url>${core-plugin.url}</url>
+		</repository>
+		<repository>
+			<id>external-mirror</id>
+			<layout>p2</layout>
+			<url>${external-mirror.url}</url>
 		</repository>
 		<repository>
 			<id>orbit</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130827064939/repository/</url>
+			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150519210750/repository/</url>
+		</repository>
+		<repository>
+			<id>sonatype</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<layout>default</layout>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
-
+	<dependencies>
+		<dependency>
+			<groupId>com.dubture.osgi</groupId>
+			<artifactId>org.json.simple</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -104,7 +137,63 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<id>parse-version</id>
+						<goals>
+							<goal>parse-version</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<argLine>${test.vmargs}</argLine>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-
+	<profiles>
+		<profile>
+			<id>release</id>
+			<activation>
+				<property>
+					<name>release</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<properties>
+				<bintray.package>release</bintray.package>
+			</properties>
+		</profile>
+		<profile>
+			<id>nightly</id>
+			<activation>
+				<property>
+					<name>release</name>
+					<value>false</value>
+				</property>
+			</activation>
+			<properties>
+				<bintray.package>nightly</bintray.package>
+			</properties>
+		</profile>
+	</profiles>
 </project>
